infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: jgslahrb/event-bus:latest
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    # Ссылаемся тут на deployment выше spec->selector->matchLabels->app: event-bus
    # Ссылаемся тут на deployment выше spec->template->metadata->labels->app: event-bus
    app: event-bus
  # NodePort - Дополнительный порт, который случайно устанавливает kubectl при запуске сервиса 4000:30670
  # Всё это можно увидеть через команду kubectl describe service [name service]
  # Если не указывать type - k8s создаст ClusterIP по умолчанию сам
  # type: NodePort - можно указать промежуточный порт который может работать через port-forward
  # type: ClusterIP
  ports: 
    - name: event-bus
      protocol: TCP
      # 4005 Это порт на котором у нас работает микросервис
      # Для этого в React приложении мы указываем app.listen(4005, () => {});
      # Port который запрашивается в браузере
      port: 4005
      # port целевой которй прослушивается в самом контейнере
      targetPort: 4005
