infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: jgslahrb/moderation:latest
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    # Ссылаемся тут на deployment выше spec->selector->matchLabels->app: moderation
    # Ссылаемся тут на deployment выше spec->template->metadata->labels->app: moderation
    app: moderation
  # NodePort - Дополнительный порт, который случайно устанавливает kubectl при запуске сервиса 4003:30670
  # Всё это можно увидеть через команду kubectl describe service [name service]
  # Если не указывать type - k8s создаст ClusterIP по умолчанию сам
  # type: NodePort - можно указать промежуточный порт который может работать через port-forward
  # type: ClusterIP
  ports: 
    - name: moderation
      protocol: TCP
      # 4003 Это порт на котором у нас работает микросервис
      # Для этого в React приложении мы указываем app.listen(4003, () => {});
      # Port который запрашивается в браузере
      port: 4003
      # port целевой которй прослушивается в самом контейнере
      targetPort: 4003
