infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: jgslahrb/posts:latest
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    # Ссылаемся тут на deployment выше spec->selector->matchLabels->app: event-bus
    # Ссылаемся тут на deployment выше spec->template->metadata->labels->app: event-bus
    app: posts
  # NodePort - Дополнительный порт, который случайно устанавливает kubectl при запуске сервиса 4000:30670
  # Всё это можно увидеть через команду kubectl describe service [name service]
  # Если не указывать type - k8s создаст ClusterIP по умолчанию сам
  # type: NodePort - можно указать промежуточный порт который может работать через port-forward
  # type: ClusterIP
  ports: 
    - name: posts
      protocol: TCP
      # 4000 Это порт на котором у нас работает микросервис
      # Для этого в React приложении мы указываем app.listen(4000, () => {});
      # Port который запрашивается в браузере
      port: 4000
      # port целевой которй прослушивается в самом контейнере
      targetPort: 4000
