infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: jgslahrb/query:latest
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    # Ссылаемся тут на deployment выше spec->selector->matchLabels->app: query
    # Ссылаемся тут на deployment выше spec->template->metadata->labels->app: query
    app: query
  # NodePort - Дополнительный порт, который случайно устанавливает kubectl при запуске сервиса 4002:30670
  # Всё это можно увидеть через команду kubectl describe service [name service]
  # Если не указывать type - k8s создаст ClusterIP по умолчанию сам
  # type: NodePort - можно указать промежуточный порт который может работать через port-forward
  # type: ClusterIP
  ports: 
    - name: query
      protocol: TCP
      # 4002 Это порт на котором у нас работает микросервис
      # Для этого в React приложении мы указываем app.listen(4002, () => {});
      # Port который запрашивается в браузере
      port: 4002
      # port целевой которй прослушивается в самом контейнере
      targetPort: 4002
